--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
                     <div id="optionsContainer" class="options-container"></div>
                 </div>
                 
-                <button id="nextBtn" class="next-btn">Next Question</button>
+                <div class="button-container">
+                    <button id="backBtn" class="back-btn">Back to Levels</button>
+                    <button id="nextBtn" class="next-btn">Next Question</button>
+                </div>
             </div>
 
             <!-- Results Screen -->
